[package]
name = "halo-sqlx"
version = "0.3.3"
edition = "2024"
description = "一个可组合的 SQL 拼接与参数收集库（参考 go-sqlbuilder 的设计）"
documentation = "https://docs.rs/halo-sqlx"
homepage = "https://github.com/halo-space/sqlx"
repository = "https://github.com/halo-space/sqlx"
license = "MIT"
authors = ["halo-space"]
readme = "README.md"

[lib]
name = "halo_space"

[dependencies]
dyn-clone = "1.0.20"
thiserror = "2.0.17"
time = { version = "0.3.44", features = ["formatting", "macros"] }

[dev-dependencies]
pretty_assertions = "1.4.1"
